fix: lighthouse accessibility contrast

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -41,6 +41,7 @@ media queries
     --grey: #565555; /* Davys Grey */
     --orange: #FFB341; /* Yellow Orange */
     --blue: #5EB1FF; /* Blue Jeans */
+    --dark-blue: #016bde /* Varient of --blue */
     --silver: #C4CAD0; /* Silver Sand */
     --cream: #FCF7FF; /* Magnolia */
     }
@@ -222,6 +223,10 @@ blockquote {
 
 /* Homepage */
 
+/* hero area */
+.btn-primary {
+  background-color: var(--dark-blue);
+}
 /* Information area */
 
 .main-area i {
